[package]
name = "jwt-validator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
jwt-core = { path = "core" }
jwt-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

[patch.crates-io]
# TODO: jwt-compact patching shouldn't be needed long-term, it's just for requesting the "std" feature from `rsa`
jwt-compact = { path = "/Users/tzerrell/code/jwt-compact" }
rsa = { path = "/Users/tzerrell/code/RustCrypto/RSA" }
